[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
json = "0.12.4"
serde = "1.0.198"
yew = { version = "0.21.0", features = ["csr", "ssr", "hydration"] }
yew-websocket = "1.21.0"
