[package]
name = "builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cult-common = { path = "../cult-common/" }
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
fs_extra = "1.2"