[package]
name = "cult-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0-alpha.1"
chrono = { version = "0.4.38", features = ["serde"] }
strum = { version = "0.26.2", features = ["derive"] }
flate2 = "1.0.30"