[package]
name = "cult-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[build]
target = "wasm32-unknown-unknown"

[dependencies]
wasm-bindgen = { version = "0.2.92" }
anyhow = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.0-alpha.1"
chrono = { version = "0.4.38", features = ["serde"] }
strum = { version = "0.26.2", features = ["derive"] }
flate2 = "1.0.30"
ritelinked = "0.3.2"
tsify-next = { version = "0.5.3" }
getrandom = { version = "0.2", features = ["js"] }
bytes = { version = "1.7.1", features = ["serde"] }
twox-hash = "1.6"
