[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cult-common = { path = "../cult-common/" }
actix = "0.13.3"
actix-web = "4.5.1"
actix-web-actors = "4.3.0"
tokio = { version = "1.37", features = ["full"] }
actix-files = "0.6.5"
anyhow = "1.0.82"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
rand = "0.8.5"
log = "0.4.21"
oauth2 = "4.4.2"
attohttpc = { version = "0.28.0", features = ["json"] }
strum = { version = "0.26.2", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
flate2 = "1.0.30"